--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.hikari.maximum-pool-size=10
+spring.flyway.baseline-on-migrate=true
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+logging.level.org.zalando.logbook=TRACE
