--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/products
+spring.datasource.url=${MYSQL_URL:jdbc:mysql://localhost:3306/products}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.username=${MYSQL_USERNAME:root}
+spring.datasource.password=${MYSQL_PASSWORD:123456}
 spring.datasource.hikari.maximum-pool-size=10
 spring.flyway.baseline-on-migrate=true
 spring.flyway.enabled=true
